Day4/ingress/ingress.yml
oapiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tektutor 
  annotations:
    haproxy.router.openshift.io/rewrite-target: /

spec:
  rules:
  - host: tektutor.apps.ocp.tektutor.labs
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /nginx
        pathType: Prefix 

      - backend:
          service:
            name: hello 
            port:
              number: 8080
        path: /hello
        pathType: Prefix
